Fix search icon position on small screens

--- a/src/assets/scss/layout/_site-header.scss
+++ b/src/assets/scss/layout/_site-header.scss
@@ -114,8 +114,8 @@
     font-size: 2.4rem;
 
     @include atSmall {
-      top: 2.6rem;
-      right: 7rem;
+      top: 2.5rem;
+      right: 4rem;
     }
 
     @include atMedium {
